column text alignment issues

--- a/assets/sass/05-blocks/media-text/_style.scss
+++ b/assets/sass/05-blocks/media-text/_style.scss
@@ -11,10 +11,10 @@
     margin-left: var(--global--spacing-horizontal);
   }
   &.has-media-on-the-right.left-rule .wp-block-media-text__content {
-    border-right: 3px solid var(--global--color-purple);
-    border-left: none;
+    border-left: 3px solid var(--global--color-purple);
+    border-right: none;
     margin-right: var(--global--spacing-horizontal);
-    margin-left: none;
+    margin-left: 0;
   }
   a:focus img {
     outline-offset: -1px;
